# ZenRipple

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SKILL.md  install.sh
bench/: cli.py  improve.py  judge.py  parallel_test.py  pyproject.toml  run_webvoyager.py  runner.py  scenario.py  verify.py
bench/data/: webvoyager_sample.json
bench/loaders/: __init__.py  webvoyager.py
bench/scenarios/: navigation.py  phase10_features.py  phase6_features.py  phase7_features.py  phase8_features.py  phase9_features.py
bench/tests/: test_webvoyager.py
browser/: zenleap_agent.uc.js  zenripple_agent.uc.js
browser/actors/: ZenLeapAgentChild.sys.mjs  ZenRippleAgentChild.sys.mjs  ZenRippleAgentParent.sys.mjs
browser/pages/: dashboard.css  dashboard.html  dashboard.js  session.html
docs/: architecture.md  index.md  phase7-cookies-storage.md  phase9-multi-tab.md  phase9-recording.md  phase9-self-healing.md  trusted-keyboard-input.md
mcp/: pyproject.toml  zenleap_mcp_server.py  zenripple_cli.py  zenripple_mcp_server.py  zenripple_session.py  zenripple_session_file.py
scripts/: test_mcporter_parallel_sessions.sh  test_replay.py
tests/: test_zenleap_mcp.py  test_zenripple_mcp.py
tests/e2e/: e2e_phase10.py  e2e_phase3.py  e2e_phase4.py  e2e_phase5.py  e2e_phase9.py
