[project]
name = "zen-ai-agent-mcp"
version = "1.0.0"
description = "MCP server for Zen AI Agent — browser automation for Claude Code and AI agents"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0",
    "pillow>=12.1.1",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
