[project]
name = "zenripple-mcp"
version = "1.0.0"
description = "MCP server for ZenRipple — browser automation for Claude Code and AI agents"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0",
    "pillow>=12.1.1",
    "websockets>=16.0",
]

[project.scripts]
zenripple = "zenripple_cli:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
